@@ -1,0 +1,14 @@
+################################################################################
+# Package: InDetFullChainTests
+################################################################################
+
+# Declare the package name:
+atlas_subdir( InDetFullChainTests )
+
+# Declare the package's dependencies:
+atlas_depends_on_subdirs( PRIVATE
+                          TestPolicy )
+
+# Install files from the package:
+atlas_install_joboptions( share/*.py )
+
