@@ -1,5 +1,3 @@
-
-
 <?xml version="1.0"?>
 
 <!DOCTYPE unifiedTestConfiguration SYSTEM "http://www.hep.ucl.ac.uk/atlas/AtlasTesting/DTD/unifiedTestConfiguration.dtd">
