@@ -1,3 +1,7 @@
+2016-02-01 alibrari 
+	* fix InDetFullChainTests_TestConfiguration.xml
+	* tagged as InDetFullChainTest-00-00-04
+
 2014-09-01 Nick Styles
 	* Go back to validated R1 geo tag
 	* Add first version of R2 tests
